Moved fixtures to testFixtures.

--- a/sparkcql-core/build.gradle
+++ b/sparkcql-core/build.gradle
@@ -6,6 +6,8 @@ dependencies {
 
     testImplementation(testFixtures(project(":sparkcql-core")))
     testFixturesImplementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
+    testFixturesImplementation "info.cqframework:elm:${cqfVersion}"
+    testFixturesImplementation "info.cqframework:elm-jackson:${cqfVersion}"
 
     /*
     The only reference to Clinical Quality Framework (CQF) should be ELM because:
@@ -15,6 +17,4 @@ dependencies {
     */
     implementation "info.cqframework:elm:${cqfVersion}"
     implementation "info.cqframework:elm-jackson:${cqfVersion}"
-
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
 }
