Dropped EvaluatedResources requirement since we have Retrieve actions in the Pipeline Builder.

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ slf4jVersion=1.7.33
 sparkVersion=3.3.2
 ucumVersion=1.0.3
 mockitoVersion=5.5.0
+scalaVersion=2.12.17
 
 # Build Settings
 org.gradle.console=rich
