--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,8 @@ sparkVersion=3.3.2
 ucumVersion=1.0.3
 mockitoVersion=5.5.0
 scalaVersion=2.12.17
+kryoVersion=4.0.2
+chillVersion=0.10.0
 
 # Build Settings
 org.gradle.console=rich
