Attempt to move to Kyro. Unstable.

--- a/sparkcql-cqf/build.gradle
+++ b/sparkcql-cqf/build.gradle
@@ -13,6 +13,7 @@ dependencies {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
 
+    implementation "com.esotericsoftware:kryo-shaded:${kryoVersion}"
     implementation "org.scala-lang:scala-library:${scalaVersion}"
 
     implementation "info.cqframework:cql:${cqfVersion}"
