--- a/sparkcql-core/build.gradle
+++ b/sparkcql-core/build.gradle
@@ -4,13 +4,13 @@ dependencies {
     implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
     implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
 
-    implementation "com.esotericsoftware:kryo-shaded:${kryoVersion}"
-    implementation "com.twitter:chill-java:${chillVersion}"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
 
     testImplementation(testFixtures(project(":sparkcql-core")))
     testFixturesImplementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
     testFixturesImplementation "info.cqframework:elm:${cqfVersion}"
     testFixturesImplementation "info.cqframework:elm-jackson:${cqfVersion}"
+    testFixturesImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
 
     /*
     The only reference to Clinical Quality Framework (CQF) should be ELM because:
