--- a/sparkcql-cqf/build.gradle
+++ b/sparkcql-cqf/build.gradle
@@ -5,5 +5,6 @@ dependencies {
     implementation "info.cqframework:elm-jackson:${cqfVersion}"
     implementation "info.cqframework:model-jackson:${cqfVersion}"
     implementation "info.cqframework:quick:${cqfVersion}"
+    implementation "info.cqframework:qdm:${cqfVersion}"
     implementation "org.fhir:ucum:${ucumVersion}"
 }
