--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'sparkcql'
 include(
     'sparkcql-core',
     'sparkcql-cqf',
-    'sparkcql-cqf-shadow'
+    'sparkcql-cqf-shadow',
+    'transpiler'
 )
